--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ button {
   border-radius: 5px;
   height: 30px;
   width: 180px;
+  text-transform: uppercase;
 }
 
 nav button {
@@ -65,6 +66,7 @@ nav button {
 .timer {
   border: 1px solid black;
   border-radius: 5px;
+  box-sizing: border-box;
   height: 80px;
   width: 80px;
 }
@@ -72,6 +74,7 @@ nav button {
 .scoreboard {
   border: 1px solid black;
   border-radius: 5px;
+  box-sizing: border-box;
   height: 80px;
   width: 80px;
 }
@@ -79,6 +82,7 @@ nav button {
 .health {
   border: 1px solid black;
   border-radius: 5px;
+  box-sizing: border-box;
   height: 80px;
   width: 80px;
 }
@@ -139,29 +143,40 @@ nav button {
     height: 150px;
     width: 95%;
     margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .screen {
     height: 80px;
     width: 80%;
+    text-transform: uppercase;
+    font-size: 35px;
+    text-align: center;
+    line-height: 70px;
   }
 
   .statistics {
     margin-top: 10px;
     height: 70px;
     width: 95%;
+    font-size: 12px;
   }
 
   .timer {
     height: 50px;
+    padding: 2px;
   }
 
   .scoreboard {
     height: 50px;
+    padding: 2px;
   }
 
   .health {
     height: 50px;
+    padding: 2px;
   }
 
   .color-buttons-container {
