--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,13 @@ nav {
 }
 
 button {
+  background-color: white;
+  border: 1px solid black;
   border-radius: 5px;
   height: 30px;
   width: 180px;
   text-transform: uppercase;
+  outline: none;
 }
 
 nav button {
@@ -106,6 +109,10 @@ nav button {
 
 .color-buttons-container ul li button {
   margin: 20px 0;
+}
+
+button:active {
+  color: inherit;
 }
 
 @media only screen and (max-width: 700px) {
