--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,11 @@ nav button {
   width: 80px;
 }
 
+.scoreboard.scored {
+  animation-name: point-score;
+  animation-duration: 1s;
+}
+
 .health {
   border: 1px solid black;
   border-radius: 5px;
@@ -113,6 +118,15 @@ nav button {
 
 button:active {
   color: inherit;
+}
+
+@keyframes point-score {
+
+  0%    { height: 80px; width: 80px; }
+  49%   { height: 85px; width: 85px; }
+  50%   { height: 85px; width: 85px; }
+  100%  { height: 80px; width: 80px; }
+
 }
 
 @media only screen and (max-width: 700px) {
@@ -179,6 +193,10 @@ button:active {
   .scoreboard {
     height: 50px;
     padding: 2px;
+  }
+
+  .score-display {
+    font-size: 10px;
   }
 
   .health {
