--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,24 @@
 
+body {
+  width: 800px;
+  /* height: 1000px;
+  width: 800px; */
+  margin: 0 auto;
+  /* overflow: hidden; */
+}
+
 main {
   border: 1px solid black;
   font-family: 'Ubuntu', sans-serif;
-  height: 100%;
-  width: 100%;
+  /* background-color: */
+  background-color: #F5F4F6;
+}
+
+h1 {
+  /* text-align: center; */
+  text-transform: uppercase;
+  /* width: 40%; */
+  font-family: 'Bubblegum Sans', 'Ubuntu';
 }
 
 nav {
@@ -17,15 +32,32 @@ nav {
 button {
   background-color: white;
   border: 1px solid black;
-  border-radius: 5px;
+  border-radius: 20px;
   height: 30px;
   width: 180px;
   text-transform: uppercase;
   outline: none;
+  font-family: 'Lato';
+  font-weight: bold;
 }
 
 nav button {
   margin-right: 20px;
+  color: white;
+  background-color: black;
+}
+
+.welcome-screen {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  /* height: 100vh; */
+  background-color: white;
+  font-family: 'Bubblegum Sans';
+  overflow: hidden;
 }
 
 .screen-container {
@@ -45,12 +77,7 @@ nav button {
   border-radius: 5px;
   height: 100px;
   width: 200px;
-}
-
-.full-screen-wrapper {
-  border: 1px solid black;
-  margin: 0 auto;
-  width: 800px;
+  background-color: white;
 }
 
 .statistics {
@@ -72,6 +99,7 @@ nav button {
   box-sizing: border-box;
   height: 80px;
   width: 80px;
+  background-color: white;
 }
 
 .scoreboard {
@@ -80,11 +108,7 @@ nav button {
   box-sizing: border-box;
   height: 80px;
   width: 80px;
-}
-
-.scoreboard.scored {
-  animation-name: point-score;
-  animation-duration: 1s;
+  background-color: white;
 }
 
 .health {
@@ -93,6 +117,7 @@ nav button {
   box-sizing: border-box;
   height: 80px;
   width: 80px;
+  background-color: white;
 }
 
 .color-buttons-container {
@@ -116,27 +141,58 @@ nav button {
   margin: 20px 0;
 }
 
+.pulse {
+  animation-name: pulse_animation;
+  animation-duration: 5000ms;
+  transform-origin:70% 70%;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+#play {
+  margin: 0 auto;
+  font-family: 'Lato';
+  color: white;
+  background-color: black;
+}
+
 button:active {
   color: inherit;
 }
 
-@keyframes point-score {
+#play:active {
+  color: black;
+  background-color: white;
+  border: 2px solid black;
+}
 
-  0%    { height: 80px; width: 80px; }
-  49%   { height: 85px; width: 85px; }
-  50%   { height: 85px; width: 85px; }
-  100%  { height: 80px; width: 80px; }
-
+@keyframes pulse_animation {
+	0% { transform: scale(1); }
+	30% { transform: scale(1); }
+	40% { transform: scale(1.08); }
+	50% { transform: scale(1); }
+	60% { transform: scale(1); }
+	70% { transform: scale(1.05); }
+	80% { transform: scale(1); }
+	100% { transform: scale(1); }
 }
 
 @media only screen and (max-width: 700px) {
   body {
+    max-height: 700px;
+    /* height: 500px; */
     width: 100%;
+    /* overflow: hidden; */ */
   }
 
   main {
     margin: 0 auto;
     width: 280px;
+  }
+
+  h1 {
+    font-size: 60px;
+    text-align: center;
   }
 
   nav {
@@ -150,14 +206,11 @@ button:active {
   button {
     width: 120px;
     height: 30px;
+    font-size: 20px;
   }
 
   nav button {
     margin: 0;
-  }
-
-  .full-screen-wrapper {
-    width: 280px;
   }
 
   .screen-container {
@@ -176,6 +229,8 @@ button:active {
     font-size: 35px;
     text-align: center;
     line-height: 70px;
+    font-family: 'Bubblegum Sans', cursive;
+    font-weight: bold;
   }
 
   .statistics {
